fix: z-index

--- a/src/assets/scss/components/Header/_base.scss
+++ b/src/assets/scss/components/Header/_base.scss
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   z-index: 2;
   &--banner {
     display: flex;
@@ -10,7 +11,7 @@
     max-width: 1200px;
     max-height: 50px;
     margin: 0 auto;
-    padding: 0 1.5rem;
+    // padding: 0 1.5rem;
     padding-top: 3.5rem;
     img {
       height: 40px;
